Doing FIX of correct sliding jumps - UNWORKING COMMIT!

--- a/src/RangeSlider.css
+++ b/src/RangeSlider.css
@@ -6,6 +6,9 @@
     transition: none;
     box-sizing: border-box;
 }
+.range-slider__crop {
+    overflow: hidden;
+}
 .range-slider__keyhole {
     overflow: hidden;
     margin: 0 -8px;
